--- a/FDCS_1/dataset_size_analysis.ipynb
+++ b/FDCS_1/dataset_size_analysis.ipynb
@@ -29,6 +29,41 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "\n",
+    "1. Imports necessary libraries and modules.\n",
+    "2. Reads a CSV file containing electricity consumption data into a pandas DataFrame.\n",
+    "3. Preprocesses the data using a custom preprocessing function.\n",
+    "4. Combines the training and validation sets.\n",
+    "5. Prints the shapes of the normalized training, validation, and test sets.\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): \n",
+    "        Preprocesses the input DataFrame and returns normalized training, validation, and test sets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (pd.DataFrame): \n",
+    "        DataFrame containing the electricity consumption data read from the CSV file.\n",
+    "    output_names (list): \n",
+    "        List containing the name of the output variable.\n",
+    "    X_train_normalized (np.ndarray): \n",
+    "        Normalized training feature set.\n",
+    "    y_train_normalized (np.ndarray): \n",
+    "        Normalized training target set.\n",
+    "    X_val_normalized (np.ndarray): \n",
+    "        Normalized validation feature set.\n",
+    "    y_val_normalized (np.ndarray): \n",
+    "        Normalized validation target set.\n",
+    "    X_test_normalized (np.ndarray): \n",
+    "        Normalized test feature set.\n",
+    "    y_test_normalized (np.ndarray): \n",
+    "        Normalized test target set.\n",
+    "    X_train_val_normalized (np.ndarray): \n",
+    "        Combined normalized training and validation feature set.\n",
+    "    y_train_val_normalized (np.ndarray): \n",
+    "        Combined normalized training and validation target set.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
