--- a/FDCS_1/dataset_size_analysis.ipynb
+++ b/FDCS_1/dataset_size_analysis.ipynb
@@ -261,6 +261,20 @@
    ],
    "source": [
     "from FDCS_1_models_Dataset_size import run_model\n",
+    "\"\"\"\n",
+    "This script runs a model on a normalized test dataset and returns the predictions.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names):\n",
+    "        Runs the model using the provided training and test datasets and returns the predictions.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_test_set: The predictions and true values for the test set.\n",
+    "\n",
+    "Usage:\n",
+    "    Ensure that the necessary datasets (X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized) \n",
+    "    and output names (output_names) are defined before running this script.\n",
+    "\"\"\"\n",
     "pred_true_test_set = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_test_set\n"
    ]
@@ -462,6 +476,24 @@
    ],
    "source": [
     "import joblib\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "1. Imports necessary libraries: joblib and pandas.\n",
+    "2. Loads a pre-trained scaler from a joblib file.\n",
+    "3. Applies inverse transformation to the true and predicted electricity consumption values in the test set.\n",
+    "4. Saves the transformed test set to a CSV file.\n",
+    "\n",
+    "Functions:\n",
+    "- No functions are defined in this script.\n",
+    "\n",
+    "Variables:\n",
+    "- scaler_y_loaded: The loaded scaler object.\n",
+    "- pred_true_test_set: DataFrame containing true and predicted electricity consumption values.\n",
+    "\n",
+    "Filepaths:\n",
+    "- scaler_y_elec.joblib: Path to the saved scaler file.\n",
+    "- pred_true_test_set_elec_dataset_size.csv: Path to save the transformed test set CSV file.\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
     "scaler_y_loaded = joblib.load('scaler_y_elec.joblib')\n",
@@ -515,6 +547,32 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "\n",
+    "1. Imports necessary libraries: pandas, numpy, and warnings.\n",
+    "2. Reads a CSV file into a pandas DataFrame.\n",
+    "3. Defines the output names for the dataset.\n",
+    "4. Imports a preprocessing function from an external module.\n",
+    "5. Preprocesses the data using the imported function to obtain normalized training, validation, and test sets.\n",
+    "6. Combines the training and validation sets into a single set.\n",
+    "7. Prints the shapes of the training, validation, and test sets, as well as the combined training and validation set.\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, validation, and test sets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (pd.DataFrame): The DataFrame containing the dataset read from the CSV file.\n",
+    "    output_names (list): List containing the names of the output variables.\n",
+    "    X_train_normalized (np.ndarray): Normalized training features.\n",
+    "    y_train_normalized (np.ndarray): Normalized training labels.\n",
+    "    X_val_normalized (np.ndarray): Normalized validation features.\n",
+    "    y_val_normalized (np.ndarray): Normalized validation labels.\n",
+    "    X_test_normalized (np.ndarray): Normalized test features.\n",
+    "    y_test_normalized (np.ndarray): Normalized test labels.\n",
+    "    X_train_val_normalized (np.ndarray): Combined normalized training and validation features.\n",
+    "    y_train_val_normalized (np.ndarray): Combined normalized training and validation labels.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -725,6 +783,16 @@
    ],
    "source": [
     "from FDCS_1_models_Dataset_size import run_model\n",
+    "\"\"\"\n",
+    "This script runs a model on a normalized dataset and returns the predictions and true values for the test set.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names):\n",
+    "        Runs the model using the provided training and test datasets and returns the predictions and true values for the test set.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_test_set: The predictions and true values for the test set obtained from running the model.\n",
+    "\"\"\"\n",
     "pred_true_test_set = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_test_set\n"
    ]
@@ -1118,6 +1186,28 @@
    ],
    "source": [
     "import joblib\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "\n",
+    "1. Imports necessary libraries: `joblib` for loading the scaler and `pandas` for data manipulation.\n",
+    "2. Loads a pre-trained scaler from a file named 'scaler_y_temp.joblib'.\n",
+    "3. Applies the inverse transformation to the true and predicted temperature values in the test set.\n",
+    "4. Saves the transformed test set to a CSV file named 'pred_true_test_set_temp_dataset_size.csv'.\n",
+    "\n",
+    "Functions:\n",
+    "- None\n",
+    "\n",
+    "Variables:\n",
+    "- scaler_y_loaded: The loaded scaler object.\n",
+    "- pred_true_test_set: DataFrame containing the true and predicted temperature values.\n",
+    "\n",
+    "Filepaths:\n",
+    "- 'scaler_y_temp.joblib': Filepath to the saved scaler.\n",
+    "- 'pred_true_test_set_temp_dataset_size.csv': Filepath to save the transformed test set.\n",
+    "\n",
+    "Note:\n",
+    "- Ensure that `pred_true_test_set` DataFrame is defined and contains the columns 'True_Temperature Closer to Evaporator (C)' and 'Pred_Temperature Closer to Evaporator (C)' before running this script.\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
     "scaler_y_loaded = joblib.load('scaler_y_temp.joblib')\n",
@@ -1164,6 +1254,29 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script performs the following tasks:\n",
+    "1. Imports necessary libraries and modules.\n",
+    "2. Reads a CSV file containing humidity data.\n",
+    "3. Preprocesses the data using a custom preprocessing function.\n",
+    "4. Combines the training and validation sets.\n",
+    "5. Prints the shapes of the normalized datasets.\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, validation, and test sets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (pd.DataFrame): DataFrame containing the humidity data read from the CSV file.\n",
+    "    output_names (list): List containing the name of the output variable.\n",
+    "    X_train_normalized (np.ndarray): Normalized training features.\n",
+    "    y_train_normalized (np.ndarray): Normalized training labels.\n",
+    "    X_val_normalized (np.ndarray): Normalized validation features.\n",
+    "    y_val_normalized (np.ndarray): Normalized validation labels.\n",
+    "    X_test_normalized (np.ndarray): Normalized test features.\n",
+    "    y_test_normalized (np.ndarray): Normalized test labels.\n",
+    "    X_train_val_normalized (np.ndarray): Combined normalized training and validation features.\n",
+    "    y_train_val_normalized (np.ndarray): Combined normalized training and validation labels.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -1374,6 +1487,17 @@
    ],
    "source": [
     "from FDCS_1_models_Dataset_size import run_model\n",
+    "\"\"\"\n",
+    "This script runs a model on a normalized dataset and returns the predictions and true values for the test set.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names): \n",
+    "        Runs the model on the provided training and test datasets and returns the predictions and true values for the test set.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_test_set: \n",
+    "        A variable that stores the predictions and true values for the test set after running the model.\n",
+    "\"\"\"\n",
     "pred_true_test_set = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_test_set"
    ]
@@ -1767,6 +1891,24 @@
    ],
    "source": [
     "import joblib\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "\n",
+    "1. Imports necessary libraries: `joblib` for loading the scaler and `pandas` for data manipulation.\n",
+    "2. Loads a pre-trained scaler from a file named 'scaler_y_humd.joblib'.\n",
+    "3. Applies the inverse transformation to the true and predicted humidity values closer to the evaporator.\n",
+    "4. Saves the transformed dataset to a CSV file named 'pred_true_test_set_humd_dataset_size.csv'.\n",
+    "\n",
+    "Functions:\n",
+    "    None\n",
+    "\n",
+    "Variables:\n",
+    "    scaler_y_loaded (object): The loaded scaler object.\n",
+    "    pred_true_test_set (DataFrame): The DataFrame containing the true and predicted humidity values.\n",
+    "\n",
+    "Filepath:\n",
+    "    /home/lixna37/Downloads/FDCSs_Paper/FDCSs_Paper/FDCS_1/dataset_size_analysis.ipynb\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
     "scaler_y_loaded = joblib.load('scaler_y_humd.joblib')\n",
