--- a/FDCS_1/FDCS_1_models_GridSearch.ipynb
+++ b/FDCS_1/FDCS_1_models_GridSearch.ipynb
@@ -25,12 +25,34 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script reads a CSV file containing electricity consumption data, preprocesses the data, and prints the shapes of the normalized training, validation, and test datasets.\n",
+    "\n",
+    "Modules:\n",
+    "    pandas\n",
+    "    numpy\n",
+    "    warnings\n",
+    "    FDCS_1_Elec_pre_processing (custom module)\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, validation, and test datasets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (pd.DataFrame): DataFrame containing the electricity consumption data read from the CSV file.\n",
+    "    output_names (list): List containing the name of the output variable.\n",
+    "    X_train_normalized (np.ndarray): Normalized training features.\n",
+    "    y_train_normalized (np.ndarray): Normalized training labels.\n",
+    "    X_val_normalized (np.ndarray): Normalized validation features.\n",
+    "    y_val_normalized (np.ndarray): Normalized validation labels.\n",
+    "    X_test_normalized (np.ndarray): Normalized test features.\n",
+    "    y_test_normalized (np.ndarray): Normalized test labels.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Elec_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Electricity Consumption']\n",
     "\n",
