--- a/FDCS_1/dataset_size_analysis.ipynb
+++ b/FDCS_1/dataset_size_analysis.ipynb
@@ -69,7 +69,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Elec_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Electricity Consumption']\n",
     "\n",
@@ -578,7 +578,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Temp_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Temperature Closer to Evaporator (C)']\n",
     "\n",
@@ -1282,7 +1282,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Humd_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Humidity Closer to Evaporator (%)']\n",
     "\n",
@@ -1906,8 +1906,7 @@
     "    scaler_y_loaded (object): The loaded scaler object.\n",
     "    pred_true_test_set (DataFrame): The DataFrame containing the true and predicted humidity values.\n",
     "\n",
-    "Filepath:\n",
-    "    /home/lixna37/Downloads/FDCSs_Paper/FDCSs_Paper/FDCS_1/dataset_size_analysis.ipynb\n",
+    "\n",
     "\"\"\"\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
