--- a/FDCS_1/FDCS_1_models_GridSearch.ipynb
+++ b/FDCS_1/FDCS_1_models_GridSearch.ipynb
@@ -237,6 +237,27 @@
    ],
    "source": [
     "from FDCS_1_models_GridSearch import run_model\n",
+    "\"\"\"\n",
+    "This script imports the `run_model` function from the `FDCS_1_models_GridSearch` module and executes it with the provided training and validation datasets.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train, y_train, X_val, y_val, output_names): Executes a model training and validation process.\n",
+    "\n",
+    "Variables:\n",
+    "    metrics_df (DataFrame): DataFrame containing the performance metrics of the model.\n",
+    "    pred_true_ValSet (DataFrame): DataFrame containing the predicted and true values for the validation set.\n",
+    "    best_params_df (DataFrame): DataFrame containing the best hyperparameters found during the grid search.\n",
+    "\n",
+    "Parameters:\n",
+    "    X_train_normalized (array-like): Normalized training feature set.\n",
+    "    y_train_normalized (array-like): Normalized training target set.\n",
+    "    X_val_normalized (array-like): Normalized validation feature set.\n",
+    "    y_val_normalized (array-like): Normalized validation target set.\n",
+    "    output_names (list): List of output names for the model.\n",
+    "\n",
+    "Returns:\n",
+    "    pred_true_ValSet (DataFrame): DataFrame containing the predicted and true values for the validation set.\n",
+    "\"\"\"\n",
     "metrics_df, pred_true_ValSet, best_params_df = run_model(X_train_normalized, y_train_normalized,\n",
     "                                                         X_val_normalized,y_val_normalized,\n",
     "                                                         output_names)\n",
@@ -588,7 +609,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Temp_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "output_names = ['Temperature Closer to Evaporator (C)']\n",
     "\n",
     "from FDCS_1_Temp_pre_processing import preprocess_data\n",
