--- a/FDCS_1/FDCS_1_Results.ipynb
+++ b/FDCS_1/FDCS_1_Results.ipynb
@@ -29,12 +29,31 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script reads a CSV file into a pandas DataFrame, preprocesses the data using a custom preprocessing function,\n",
+    "and combines the training and validation sets. It then prints the shapes of the resulting datasets.\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, validation, and test sets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (DataFrame): The input data read from a CSV file.\n",
+    "    output_names (list): A list containing the name of the output variable.\n",
+    "    X_train_normalized (ndarray): Normalized training features.\n",
+    "    y_train_normalized (ndarray): Normalized training labels.\n",
+    "    X_val_normalized (ndarray): Normalized validation features.\n",
+    "    y_val_normalized (ndarray): Normalized validation labels.\n",
+    "    X_test_normalized (ndarray): Normalized test features.\n",
+    "    y_test_normalized (ndarray): Normalized test labels.\n",
+    "    X_train_val_normalized (ndarray): Combined normalized training and validation features.\n",
+    "    y_train_val_normalized (ndarray): Combined normalized training and validation labels.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Elec_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Electricity Consumption']\n",
     "\n",
@@ -209,6 +228,17 @@
    ],
    "source": [
     "from FDCS_1_models_FS import run_model\n",
+    "\"\"\"\n",
+    "This script runs a model using the `run_model` function from the `FDCS_1_models_FS` module and stores the predictions and true values for the test set.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names): \n",
+    "        Runs the model on the provided training and test data.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_TestSet (tuple): \n",
+    "        A tuple containing the predictions and true values for the test set.\n",
+    "\"\"\"\n",
     "pred_true_TestSet = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_TestSet"
    ]
@@ -9160,7 +9190,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Temp_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Temperature Closer to Evaporator (C)']\n",
     "\n",
@@ -18550,7 +18580,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Humd_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Humidity Closer to Evaporator (%)']\n",
     "\n",
