--- a/Lags_analysis.ipynb
+++ b/Lags_analysis.ipynb
@@ -22,8 +22,27 @@
    ],
    "source": [
     "from lags_identifier import find_top_correlated_lags\n",
+    "\"\"\"\n",
+    "This script identifies the top correlated lags for specified columns in a DataFrame.\n",
+    "\n",
+    "Modules:\n",
+    "    lags_identifier: Contains the function `find_top_correlated_lags` to find the top correlated lags.\n",
+    "    pandas: Used for data manipulation and analysis.\n",
+    "\n",
+    "Functions:\n",
+    "    find_top_correlated_lags(df, columns, lag_range): Identifies the top correlated lags for the specified columns within the given lag range.\n",
+    "\n",
+    "Variables:\n",
+    "    df (pd.DataFrame): The DataFrame containing the data read from a CSV file.\n",
+    "    columns (list of str): The list of column names for which to find the top correlated lags.\n",
+    "    lag_range (tuple of int): The range of lags to consider for correlation analysis.\n",
+    "\n",
+    "Usage:\n",
+    "    The script reads a CSV file into a DataFrame, specifies the columns of interest, and the lag range.\n",
+    "    It then calls `find_top_correlated_lags` to find the top correlated lags for the specified columns and prints the result.\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "columns = ['Electricity Consumption',\n",
     "           'Humidity Closer to Evaporator (%)',\n",
@@ -56,8 +75,32 @@
    ],
    "source": [
     "from lags_identifier import find_top_correlated_lags\n",
+    "\"\"\"\n",
+    "This script reads a CSV file into a pandas DataFrame, selects specific columns related to \n",
+    "electricity consumption, humidity, and temperature, and identifies the top correlated lags \n",
+    "within a specified range using the `find_top_correlated_lags` function from the \n",
+    "`lags_identifier` module.\n",
+    "\n",
+    "Modules:\n",
+    "    lags_identifier: Contains the `find_top_correlated_lags` function.\n",
+    "    pandas: Used for data manipulation and analysis.\n",
+    "\n",
+    "Functions:\n",
+    "    find_top_correlated_lags(df, columns, lag_range): Identifies the top correlated lags \n",
+    "    for the specified columns within the given lag range.\n",
+    "\n",
+    "Variables:\n",
+    "    df (pd.DataFrame): The DataFrame containing the data read from the CSV file.\n",
+    "    columns (list of str): The list of column names to be analyzed for lag correlation.\n",
+    "    lag_range (tuple of int): The range of lags to be considered for correlation analysis.\n",
+    "    strong_lags (dict): The dictionary containing the top correlated lags for each column.\n",
+    "\n",
+    "Usage:\n",
+    "    The script reads data from a CSV file, identifies the top correlated lags for the \n",
+    "    specified columns within the given lag range, and prints the results.\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "columns = ['Electricity Consumption',\n",
     "           'Humidity Closer to Evaporator (%)',\n",
