--- a/FDCS_1/MTL/MTL_FDCS_1_Results.ipynb
+++ b/FDCS_1/MTL/MTL_FDCS_1_Results.ipynb
@@ -34,7 +34,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "output_names = ['Electricity Consumption', 'Humidity Closer to Evaporator (%)', 'Temperature Closer to Evaporator (C)']\n",
     "\n",
     "from MTL_FDCS_1_pre_processing import preprocess_data\n",
