--- a/FDCS_2/FDCS_2_models_GridSearch.ipynb
+++ b/FDCS_2/FDCS_2_models_GridSearch.ipynb
@@ -30,7 +30,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Elec_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Electricity Consumption']\n",
     "\n",
@@ -566,7 +566,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_1/FDCS_1_Temp_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "output_names = ['Temperature Closer to Evaporator (C)']\n",
     "\n",
     "from FDCS_1_Temp_pre_processing import preprocess_data\n",
