--- a/FDCS_2/MTL/MTL_FDCS_2_Results.ipynb
+++ b/FDCS_2/MTL/MTL_FDCS_2_Results.ipynb
@@ -34,7 +34,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "output_names = ['Electricity Consumption', 'Humidity Closer to Evaporator (%)', 'Temperature Closer to Evaporator (C)']\n",
     "\n",
     "from MTL_FDCS_2_pre_processing import preprocess_data\n",
@@ -9804,7 +9804,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "output_names = ['Electricity Consumption', 'Humidity Closer to Evaporator (%)', 'Temperature Closer to Evaporator (C)']\n",
     "\n",
     "from MTL_FDCS_2_pre_processing import preprocess_data\n",
