--- a/FDCS_2/SHAP/SHAP analysis.ipynb
+++ b/FDCS_2/SHAP/SHAP analysis.ipynb
@@ -34,7 +34,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Elec_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "output_names = ['Electricity Consumption']\n",
     "\n",
     "from FDCS_2_Elec_pre_processing_SHAP import preprocess_data\n",
@@ -180,7 +180,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Temp_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "output_names = ['Temperature Closer to Evaporator (C)']\n",
     "\n",
     "from FDCS_2_Temp_pre_processing_SHAP import preprocess_data\n",
@@ -325,7 +325,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Humd_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "output_names = ['Humidity Closer to Evaporator (%)']\n",
     "\n",
     "from FDCS_2_Humd_pre_processing_SHAP import preprocess_data\n",
