--- a/FDCS_2/dataset_size_analysis.ipynb
+++ b/FDCS_2/dataset_size_analysis.ipynb
@@ -34,7 +34,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Elec_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Electricity Consumption']\n",
     "\n",
@@ -485,7 +485,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Temp_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Temperature Closer to Evaporator (C)']\n",
     "\n",
@@ -1141,7 +1141,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Humd_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Humidity Closer to Evaporator (%)']\n",
     "\n",
