--- a/FDCS_2/dataset_size_analysis.ipynb
+++ b/FDCS_2/dataset_size_analysis.ipynb
@@ -29,6 +29,29 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script performs the following tasks:\n",
+    "1. Imports necessary libraries and modules.\n",
+    "2. Reads a CSV file into a pandas DataFrame.\n",
+    "3. Preprocesses the data using a custom preprocessing function.\n",
+    "4. Combines the training and validation sets.\n",
+    "5. Prints the shapes of the normalized datasets.\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, validation, and test sets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (pd.DataFrame): DataFrame containing the data read from the CSV file.\n",
+    "    output_names (list): List containing the names of the output variables.\n",
+    "    X_train_normalized (np.ndarray): Normalized training input features.\n",
+    "    y_train_normalized (np.ndarray): Normalized training output labels.\n",
+    "    X_val_normalized (np.ndarray): Normalized validation input features.\n",
+    "    y_val_normalized (np.ndarray): Normalized validation output labels.\n",
+    "    X_test_normalized (np.ndarray): Normalized test input features.\n",
+    "    y_test_normalized (np.ndarray): Normalized test output labels.\n",
+    "    X_train_val_normalized (np.ndarray): Combined normalized training and validation input features.\n",
+    "    y_train_val_normalized (np.ndarray): Combined normalized training and validation output labels.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -226,6 +249,21 @@
    ],
    "source": [
     "from FDCS_2_models_Dataset_size import run_model\n",
+    "\"\"\"\n",
+    "This script runs a model on a normalized test dataset and returns the predictions.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names): \n",
+    "        Runs the model on the provided training and test datasets and returns the predictions.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_test_set: \n",
+    "        The predictions of the model on the test dataset.\n",
+    "\n",
+    "Usage:\n",
+    "    Ensure that the datasets (X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized) \n",
+    "    and output_names are properly defined and normalized before running this script.\n",
+    "\"\"\"\n",
     "pred_true_test_set = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_test_set\n"
    ]
@@ -427,6 +465,24 @@
    ],
    "source": [
     "import joblib\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "1. Imports necessary libraries: joblib and pandas.\n",
+    "2. Loads a pre-trained scaler from a joblib file.\n",
+    "3. Applies the inverse transformation to the true and predicted electricity consumption values in the test set.\n",
+    "4. Saves the transformed test set to a CSV file.\n",
+    "\n",
+    "Functions:\n",
+    "- No functions are defined in this script.\n",
+    "\n",
+    "Variables:\n",
+    "- scaler_y_loaded: The loaded scaler object.\n",
+    "- pred_true_test_set: DataFrame containing the true and predicted electricity consumption values.\n",
+    "\n",
+    "Filepaths:\n",
+    "- scaler_y_elec.joblib: The file from which the scaler is loaded.\n",
+    "- pred_true_test_set_elec_dataset_size.csv: The file to which the transformed test set is saved.\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
     "scaler_y_loaded = joblib.load('scaler_y_elec.joblib')\n",
@@ -480,6 +536,29 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "1. Imports necessary libraries and modules.\n",
+    "2. Reads a CSV file into a pandas DataFrame.\n",
+    "3. Preprocesses the data using a custom preprocessing function.\n",
+    "4. Combines the training and validation sets.\n",
+    "5. Prints the shapes of the normalized datasets.\n",
+    "\n",
+    "Functions:\n",
+    "- preprocess_data: A function imported from FDCS_2_Temp_pre_processing module to preprocess the data.\n",
+    "\n",
+    "Variables:\n",
+    "- df: pandas DataFrame containing the data read from the CSV file.\n",
+    "- output_names: List containing the name of the output variable.\n",
+    "- X_train_normalized: Normalized training features.\n",
+    "- y_train_normalized: Normalized training labels.\n",
+    "- X_val_normalized: Normalized validation features.\n",
+    "- y_val_normalized: Normalized validation labels.\n",
+    "- X_test_normalized: Normalized test features.\n",
+    "- y_test_normalized: Normalized test labels.\n",
+    "- X_train_val_normalized: Combined normalized training and validation features.\n",
+    "- y_train_val_normalized: Combined normalized training and validation labels.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -690,6 +769,21 @@
    ],
    "source": [
     "from FDCS_2_models_Dataset_size import run_model\n",
+    "\"\"\"\n",
+    "This script runs a model on a normalized test dataset and returns the predictions.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names):\n",
+    "        Runs the model using the provided training and test datasets.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_test_set: The predictions and true values for the test set.\n",
+    "\n",
+    "Usage:\n",
+    "    Ensure that the necessary datasets (X_train_val_normalized, y_train_val_normalized, \n",
+    "    X_test_normalized, y_test_normalized) and output names (output_names) are defined \n",
+    "    before running this script.\n",
+    "\"\"\"\n",
     "pred_true_test_set = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_test_set\n"
    ]
@@ -1083,6 +1177,28 @@
    ],
    "source": [
     "import joblib\n",
+    "\"\"\"\n",
+    "This script loads a pre-trained scaler using joblib and applies an inverse transformation to the true and predicted temperature values \n",
+    "closer to the evaporator in a test dataset. The transformed values are then saved to a CSV file.\n",
+    "\n",
+    "Functions:\n",
+    "    None\n",
+    "\n",
+    "Modules:\n",
+    "    joblib: Used for loading the pre-trained scaler.\n",
+    "    pandas (pd): Used for handling the DataFrame operations.\n",
+    "\n",
+    "Variables:\n",
+    "    scaler_y_loaded: The pre-trained scaler loaded from 'scaler_y_temp.joblib'.\n",
+    "    pred_true_test_set: DataFrame containing the true and predicted temperature values.\n",
+    "\n",
+    "Operations:\n",
+    "    1. Load the pre-trained scaler from 'scaler_y_temp.joblib'.\n",
+    "    2. Apply inverse transformation to the 'True_Temperature Closer to Evaporator (C)' column in the pred_true_test_set DataFrame.\n",
+    "    3. Apply inverse transformation to the 'Pred_Temperature Closer to Evaporator (C)' column in the pred_true_test_set DataFrame.\n",
+    "    4. Save the transformed DataFrame to 'pred_true_test_set_temp_dataset_size.csv'.\n",
+    "    5. Display the transformed DataFrame.\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
     "scaler_y_loaded = joblib.load('scaler_y_temp.joblib')\n",
@@ -1136,6 +1252,29 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script performs the following tasks:\n",
+    "1. Imports necessary libraries and modules.\n",
+    "2. Reads a CSV file into a pandas DataFrame.\n",
+    "3. Preprocesses the data using a custom preprocessing function.\n",
+    "4. Combines the training and validation sets.\n",
+    "5. Prints the shapes of the normalized training, validation, and test sets.\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, validation, and test sets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (pd.DataFrame): DataFrame containing the data read from the CSV file.\n",
+    "    output_names (list): List containing the names of the output variables.\n",
+    "    X_train_normalized (np.ndarray): Normalized training features.\n",
+    "    y_train_normalized (np.ndarray): Normalized training labels.\n",
+    "    X_val_normalized (np.ndarray): Normalized validation features.\n",
+    "    y_val_normalized (np.ndarray): Normalized validation labels.\n",
+    "    X_test_normalized (np.ndarray): Normalized test features.\n",
+    "    y_test_normalized (np.ndarray): Normalized test labels.\n",
+    "    X_train_val_normalized (np.ndarray): Combined normalized training and validation features.\n",
+    "    y_train_val_normalized (np.ndarray): Combined normalized training and validation labels.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -1169,6 +1308,20 @@
    "outputs": [],
    "source": [
     "from FDCS_2_models_Dataset_size import run_model\n",
+    "\"\"\"\n",
+    "This script runs a model on a normalized test dataset and returns the predictions.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names):\n",
+    "        Runs the model using the provided training and test datasets and returns the predictions.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_test_set: The predictions returned by the run_model function.\n",
+    "\n",
+    "Usage:\n",
+    "    Ensure that the necessary datasets (X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized) \n",
+    "    and output names (output_names) are defined before running this script.\n",
+    "\"\"\"\n",
     "pred_true_test_set = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_test_set"
    ]
@@ -1383,6 +1536,22 @@
    ],
    "source": [
     "import joblib\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "1. Imports necessary libraries: joblib and pandas.\n",
+    "2. Loads a pre-trained scaler from a file named 'scaler_y_humd.joblib'.\n",
+    "3. Applies the inverse transformation using the loaded scaler to the true and predicted humidity values in the test set.\n",
+    "4. Saves the transformed test set to a CSV file named 'pred_true_test_set_humd_dataset_size.csv'.\n",
+    "\n",
+    "Functions:\n",
+    "- joblib.load(filename): Loads a serialized object from the specified file.\n",
+    "- scaler_y_loaded.inverse_transform(data): Applies the inverse transformation to the data using the loaded scaler.\n",
+    "- pred_true_test_set.to_csv(filename, index): Saves the DataFrame to a CSV file without the index.\n",
+    "\n",
+    "Variables:\n",
+    "- scaler_y_loaded: The loaded scaler object.\n",
+    "- pred_true_test_set: DataFrame containing the true and predicted humidity values.\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
     "scaler_y_loaded = joblib.load('scaler_y_humd.joblib')\n",
